<resources>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="password_verify">Verify Password</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="products">Products</string>
    <string name="favourites">Favourites</string>
    <string name="cart">Cart</string>
    <string name="account">Account</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="amount">Amount</string>
    <string name="price">Price</string>
    <string name="price2">Price :</string>
    <string name="proceed_to_checkout">PROCEED TO CHECKOUT</string>
    <string name="total_price">Total Price:</string>
    <string name="xrp_deposit_address">XRP Deposit Address</string>
    <string name="xrp_deposit_tag">XRP Deposit Tag</string>
    <string name="send_only_xrp_to_this_deposit_address_sending_any_other_coin_or_token_to_this_address_may_result_in_the_loss_of_your_deposit_both_a_tag_and_an_address_are_required_to_successfully_deposit_your_xrp_to_binance">Send only XRP to this deposit address. Sending any other coin or token to this address may result in the loss of your deposit.Both a Tag and an Address are required to successfully deposit your XRP to Binance</string>
    <string name="i_understand_continue">I understand, continue</string>
    <string name="add_address">Add Address</string>
    <string name="address_title">Address Title</string>
    <string name="full_address">Full Address</string>
    <string name="my_addresses">My Addresses</string>
    <string name="add_new_address">Add New Address</string>
    <string name="select_address">Select an Address</string>
    <string name="f_n_sh_payment">Fınısh Payment</string>
    <string name="in_order_to_complete_your_order_you_should_send_specified_amount_of_xrp_to_specified_deposit_address_with_specified_tag_in_7_days">In order to complete your order, you should send specified amount of XRP to specified deposit address with specified tag in 7 days. You can check deposit address, tag and your payment status from your orders when you need.</string>
    <string name="xrp_to_send">XRP to Send</string>
    <string name="you_don_t_have_any_product_nin_your_cart_yet">You don\'t have any product in your cart yet.</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="orders">Orders</string>
    <string name="your_orders">YOUR ORDERS</string>
    <string name="proceeded_products">Proceeded Products</string>
    <string name="date">Date</string>
    <string name="payment_status">Payment Status</string>
    <string name="back_to_my_orders">BACK TO MY ORDERS</string>
    <string name="appname">Crypto Shopping</string>
</resources>
