<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OrderInfo"
    android:orientation="vertical">


    <android.support.v7.widget.Toolbar
        android:background="@color/colorPrimary"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize" >

        <ImageView
            android:layout_width="?attr/actionBarSize"
            android:layout_height="?attr/actionBarSize"
            android:src="@mipmap/ic_mylogo"
            android:onClick="returnHomePageFromPayment"

            />
    </android.support.v7.widget.Toolbar>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/in_order_to_complete_your_order_you_should_send_specified_amount_of_xrp_to_specified_deposit_address_with_specified_tag_in_7_days"/>


    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textStyle="bold"
        android:layout_margin="8dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:id="@+id/date"
        />


    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/payment_status"
        android:textStyle="bold"
        android:layout_margin="8dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:id="@+id/paymentStatus"
        />


    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/proceeded_products"
        android:textStyle="bold"
        android:layout_margin="8dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:id="@+id/detailedorderInfo"
        />

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/xrp_to_send"
        android:textStyle="bold"
        android:layout_margin="8dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <TextView
                android:id="@+id/xrpToSend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="" />
        </android.support.v7.widget.CardView>
        <Button
            android:id="@+id/copy"
            android:layout_width="84dp"
            android:layout_height="36dp"
            android:text="copy"
            android:layout_margin="8dp"
            android:textSize="12sp"
            style="@style/Widget.AppCompat.Button.Colored"/>
    </LinearLayout>


    <TextView
        android:textStyle="bold"
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/xrp_deposit_address"
        android:layout_margin="8dp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">
            <TextView
                android:id="@+id/depositAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="TextView"
                android:textSize="14sp" />
        </android.support.v7.widget.CardView>

        <Button
            android:id="@+id/copy1"
            android:layout_width="84dp"
            android:layout_height="36dp"
            android:text="copy"
            android:layout_margin="8dp"
            android:textSize="12sp"
            style="@style/Widget.AppCompat.Button.Colored"/>

    </LinearLayout>

    <TextView
        android:textStyle="bold"
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/xrp_deposit_tag" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">
            <TextView
                android:id="@+id/depositTag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="TextView"
                android:textSize="14sp" />
        </android.support.v7.widget.CardView>

        <Button
            android:id="@+id/copy2"
            android:layout_width="84dp"
            android:layout_height="36dp"
            android:text="copy"
            android:layout_margin="8dp"
            android:textSize="12sp"
            style="@style/Widget.AppCompat.Button.Colored"/>


    </LinearLayout>









    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_only_xrp_to_this_deposit_address_sending_any_other_coin_or_token_to_this_address_may_result_in_the_loss_of_your_deposit_both_a_tag_and_an_address_are_required_to_successfully_deposit_your_xrp_to_binance"
        android:layout_margin="8dp" />

    <Button
        android:id="@+id/completePayment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/back_to_my_orders"
        style="@style/Widget.AppCompat.Button.Colored"/>

</LinearLayout>

</ScrollView>