<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitXY"/>

    <EditText
        android:id="@+id/login_activity_editEmail"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="96dp"
        android:inputType="textEmailAddress"
        android:lines="1"
        android:imeOptions="actionNext"
        android:hint="@string/email"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textSize="16sp"/>

    <EditText
        android:id="@+id/login_activity_editPassword"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_activity_editEmail"
        android:layout_marginTop="16dp"
        android:inputType="textPassword"
        android:lines="1"
        android:imeOptions="actionDone"
        android:hint="@string/password"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textSize="16sp"
        android:textColor="@color/colorPrimary"/>


    <Button
        android:id="@+id/login_activity_btnLogin"
        android:layout_width="0dp"
        android:layout_height="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_activity_editPassword"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/login"
        android:textSize="16sp"
        android:background="@drawable/custom_bg_button"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/login_activity_btnRegister"
        android:layout_width="0dp"
        android:layout_height="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_activity_btnLogin"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/register"
        android:background="@drawable/custom_bg_button"
        android:textSize="16sp"
        android:textAllCaps="false"/>

</android.support.constraint.ConstraintLayout>